# worldedit2

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
assets/: .gitignore
src/: lib.rs  main.rs  spline.rs
src/editor/: camera_rig_orbital.rs  camera_rig_topdown.rs  colors.rs  mod.rs  ops.rs  selection.rs  terrain_cell_preview.rs  transform_ops.rs  utility.rs
src/editor/components/: mod.rs  viewport_rect.rs  viewport_render_target.rs
src/editor/gizmos/: grid_floor.rs  mod.rs
src/editor/resources/: mod.rs  viewport_rect.rs  viewport_render_target.rs
src/editor/selection_actions/: deletion.rs  mod.rs  transform_action.rs
src/editor/selection_ops/: deletion.rs  mod.rs  transform_ops.rs
src/editor/ui/: editor_pane.rs  main_ui.rs  mod.rs  ui_tiling.rs  viewport.rs
src/editor/ui/outliner_pane/: mod.rs
src/editor/ui/panes/: map_view.rs  mod.rs  outliner.rs  viewport3d.rs
src/editor/ui/panes/viewport3d/: render_target.rs
src/editor/ui/viewport/: mod.rs  rt.rs
src/editor/ui/viewport_pane/: mod.rs  render_target.rs
src/terrain_processing/: base_hmp.rs  heightmap.rs  heightmap_bundle.rs  mod.rs  terrain_cruncher.rs  terrain_mesh.rs
